[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/Pages/ProjectSettings/ProjectSettingsMenu.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Pages/ProjectSettings/ChangeCellSize.tscn" type="PackedScene" id=2]
[ext_resource path="res://Styles/style1.tres" type="Theme" id=3]

[sub_resource type="ButtonGroup" id=1]

[node name="MessagePacksMenu" type="Control" groups=["messageMenu"]]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
modulate = Color( 0.203922, 0.196078, 0.192157, 1 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 3 )

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer/VBoxContainer"]
margin_right = 1024.0
margin_bottom = 50.0

[node name="Label" type="Label" parent="CanvasLayer/VBoxContainer/HBoxContainer2"]
margin_top = 15.0
margin_right = 970.0
margin_bottom = 35.0
size_flags_horizontal = 3
text = "Project Settings:  "
align = 2
valign = 1

[node name="ExitBtn" type="Button" parent="CanvasLayer/VBoxContainer/HBoxContainer2"]
margin_left = 974.0
margin_right = 1024.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
text = "  X  "

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/VBoxContainer"]
margin_top = 54.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxChooseEntity" type="VBoxContainer" parent="CanvasLayer/VBoxContainer/HBoxContainer"]
margin_right = 1024.0
margin_bottom = 546.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 3

[node name="ScrollContainer" type="ScrollContainer" parent="CanvasLayer/VBoxContainer/HBoxContainer/VBoxChooseEntity"]
margin_right = 1024.0
margin_bottom = 546.0
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="SettingsContainer" type="VBoxContainer" parent="CanvasLayer/VBoxContainer/HBoxContainer/VBoxChooseEntity/ScrollContainer"]
margin_right = 1024.0
margin_bottom = 546.0
rect_min_size = Vector2( 200, 200 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer/VBoxContainer/HBoxContainer/VBoxChooseEntity/ScrollContainer/SettingsContainer"]
margin_right = 1024.0
margin_bottom = 26.0

[node name="Label" type="Label" parent="CanvasLayer/VBoxContainer/HBoxContainer/VBoxChooseEntity/ScrollContainer/SettingsContainer/HBoxContainer2"]
margin_top = 3.0
margin_right = 163.0
margin_bottom = 23.0
text = "Collision cell size: "

[node name="ChangeCellSize" parent="CanvasLayer/VBoxContainer/HBoxContainer/VBoxChooseEntity/ScrollContainer/SettingsContainer/HBoxContainer2" instance=ExtResource( 2 )]
margin_left = 167.0
margin_top = 0.0
margin_right = 1024.0
margin_bottom = 26.0
group = SubResource( 1 )
items = [ "8x8 px size", null, false, 0, null, "16x16 px size", null, false, 1, null ]

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/VBoxContainer/HBoxContainer/VBoxChooseEntity/ScrollContainer/SettingsContainer"]
margin_top = 30.0
margin_right = 1024.0
margin_bottom = 68.0

[node name="runFromCurLevelBtn" type="CheckButton" parent="CanvasLayer/VBoxContainer/HBoxContainer/VBoxChooseEntity/ScrollContainer/SettingsContainer/HBoxContainer"]
margin_right = 1024.0
margin_bottom = 38.0
size_flags_horizontal = 3
text = "Run from current level"

[node name="HboxContainer3" type="HBoxContainer" parent="CanvasLayer/VBoxContainer/HBoxContainer/VBoxChooseEntity/ScrollContainer/SettingsContainer"]
margin_top = 72.0
margin_right = 1024.0
margin_bottom = 92.0

[node name="Label" type="Label" parent="CanvasLayer/VBoxContainer/HBoxContainer/VBoxChooseEntity/ScrollContainer/SettingsContainer/HboxContainer3"]
margin_right = 192.0
margin_bottom = 20.0
text = "Add EntityMerged Slots"

[node name="addSlotsSlider" type="HSlider" parent="CanvasLayer/VBoxContainer/HBoxContainer/VBoxChooseEntity/ScrollContainer/SettingsContainer/HboxContainer3"]
margin_left = 196.0
margin_right = 980.0
margin_bottom = 16.0
size_flags_horizontal = 3
rounded = true

[node name="addSlotsLabel" type="Label" parent="CanvasLayer/VBoxContainer/HBoxContainer/VBoxChooseEntity/ScrollContainer/SettingsContainer/HboxContainer3"]
margin_left = 984.0
margin_right = 1024.0
margin_bottom = 20.0
rect_min_size = Vector2( 40, 0 )
text = "0"

[node name="runFromCurLevelBtn" type="CheckButton" parent="CanvasLayer/VBoxContainer/HBoxContainer/VBoxChooseEntity/ScrollContainer/SettingsContainer"]
margin_top = 96.0
margin_right = 1024.0
margin_bottom = 134.0
size_flags_horizontal = 3
text = "Debug on"

[node name="debugContainer" type="VBoxContainer" parent="CanvasLayer/VBoxContainer/HBoxContainer/VBoxChooseEntity/ScrollContainer/SettingsContainer"]
margin_top = 138.0
margin_right = 1024.0
margin_bottom = 176.0

[node name="showTriggerRectsBtn" type="CheckButton" parent="CanvasLayer/VBoxContainer/HBoxContainer/VBoxChooseEntity/ScrollContainer/SettingsContainer/debugContainer"]
margin_right = 1024.0
margin_bottom = 38.0
size_flags_horizontal = 3
text = "Show trigger rects"

[connection signal="button_down" from="CanvasLayer/VBoxContainer/HBoxContainer2/ExitBtn" to="." method="_on_ExitBtn_button_down"]
[connection signal="toggled" from="CanvasLayer/VBoxContainer/HBoxContainer/VBoxChooseEntity/ScrollContainer/SettingsContainer/HBoxContainer/runFromCurLevelBtn" to="." method="_on_runFromCurLevelBtn_toggled"]
[connection signal="value_changed" from="CanvasLayer/VBoxContainer/HBoxContainer/VBoxChooseEntity/ScrollContainer/SettingsContainer/HboxContainer3/addSlotsSlider" to="." method="_on_addSlotsSlider_value_changed"]
[connection signal="toggled" from="CanvasLayer/VBoxContainer/HBoxContainer/VBoxChooseEntity/ScrollContainer/SettingsContainer/debugContainer/showTriggerRectsBtn" to="." method="_on_showTriggerRectsBtn_toggled"]
